syntax = "proto3";

package kafmesh.deviceId;

message EnrichedHeartbeat {
    int64 time = 1;
}
